--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_local_notifications: ^6.0.0
+  timezone: ^0.7.0
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   flutter_test:
