--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_local_notifications: ^6.0.0
   timezone: ^0.7.0
   flutter_native_timezone: ^2.0.0
+  sembast: ^3.1.0+2
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
