--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   sembast: ^3.1.0+2
   path_provider: ^2.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
